<resources>
    <string name="app_name">Twitter Stream</string>
    <string name="login">Login to Twitter</string>
    <string name="timeline">Timeline</string>
    <string name="close_compose_tweet">Exit tweet compose</string>
    <string name="user_image">User profile image</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="text_140">140</string>
    <string name="tweet">Tweet</string>
    <string name="discard_tweet">Discard Tweet ?</string>
    <string name="are_you_sure">Are you sure you want to skip tweeting ?</string>
    <string name="empty_tweet">Cannot post an empty message. Type something to post.</string>
    <string name="at_symbol">\@%1$s</string>
    <string name="failed_to_fetch">Failed to fetch tweet !</string>
    <string name="tweet_success">Posted tweet successfully !</string>
    <string name="twitter_image">Twitter image</string>
    <string name="url_thumbnail">Image from embedded url</string>
    <string name="banner_image">User banner image</string>
    <string name="user_verified">Verified user symbol.</string>
    <string name="location_icon">Location icon</string>
    <string name="link_icon">Website link icon</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="retweet">Retweet</string>
    <string name="reply">Reply</string>
    <string name="profile_image">User profile</string>
</resources>
