<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.santhosh.codepath.twitterstream.fragment.PostTweetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/close_compose_tweet"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/user_image"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <EditText
        android:id="@+id/tweet_compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whats_happening"
        android:lines="8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/character_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/tweet_button"
            android:text="@string/text_140" />

        <Button
            android:id="@+id/tweet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/holo_blue_light"
            android:text="@string/tweet"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>
